--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@
 #
 #   History:
 #	2023-11-02, first version (init)
-# 
+#   2023-11-03, edit install,unistall options
 #
 
 SHELL = /bin/sh
@@ -14,32 +14,26 @@ CC    = gcc
 FLAGS   = -Wall
 CFLAGS  = -fPIC -Ofast
 LDFLAGS = -shared
-#LDLIBS  = -lpq
-
-# uname -p , print the processor type (non-portable)
-# uname -s , print the kernel name
-# uname -i , print the hardware platform (non-portable) 
-# uname -m , print the machine hardware name
 
 OS = $(shell uname -s)
 ifeq ($(OS),Linux)
-	OS_PREFIX = /usr/local/RateEngine/
+	OS_BIN = /usr/local/sbin/
+	OS_LIB = /lib/
 	HOST_ARCH = $(shell uname -m)
 #	LDLIBS += -lpthread
 endif
 
 # GCC version
 GCC_VERSION = $(shell gcc -dumpversion)
-ifeq ($(GCC_VERSION),12)
-	#echo "ERROR..."
-	#exit
+
+ifneq ($(GCC_VERSION),12)
+    $(error GCC version is not 12. Please use GCC version 12.)
 endif
 
 # CPU ARCH
 ifeq ($(HOST_ARCH),x86_64)
 	CFLAGS += -m64 -march=nocona -mtune=generic -mfpmath=sse -flto -funroll-loops
 #	CFLAGS += -m64 -mfpmath=sse -flto -march=native -funroll-loops
-# 2019-10-16,
 #	CFLAGS += -m64 -mtune=generic -flto -funroll-loops -mavx2
 else
 ifeq ($(HOST_ARCH),i386)
@@ -50,7 +44,7 @@ endif
 DEBUG ?= 0
 ifeq ($(DEBUG),1)
     FLAGS     += -g
-#    CFLAGS    += $(FLAGS) -DDEBUG_MEM
+    CFLAGS    += $(FLAGS) -DDEBUG_MEM
     LDFLAGS   += $(FLAGS)
 endif
 
@@ -84,102 +78,40 @@ clean:
 .PHONY: help
 help:
 	-@echo ""
-	-@echo " Help for RateEngine make commands:"
+	-@echo " Help for rtpengine-connector make commands:"
 	-@echo "  make                             - compiletion with gcc standart flags"
 	-@echo "  make DEBUG=1                     - compiletion with gcc debug flags"
 	-@echo "  make clean                       - remove all object,share libs and exe files from the src dir"
-	-@echo "  make install                     - instalation with default PREFIX=/usr/local/RateEngine/"
-	-@echo "  make install PREFIX=/usr/local   - instalation in define path in PREFIX="
-	-@echo "  make uninstall                   - uninstalation from default path,PREFIX=/usr/local/RateEngine/"
-	-@echo "  make uninstall PREFIX=/usr/local - uninstalation from define path in PREFIX="
+	-@echo "  make install                     - instalation "
+	-@echo "  make uninstall                   - uninstalation"
 	-@echo ""
 
-PREFIX ?= $(OS_PREFIX)
-
-LIBS_CFG = /etc/ld.so.conf.d/RateEngine.conf
-
-BIN  = $(PREFIX)bin/
-LIBS = $(PREFIX)libs/
-CFG  = $(PREFIX)config/
-SMP  = $(CORE_DIR)config/samples/*
-_SMP  = $(CORE_DIR)config/samples/
-LOG  = $(PREFIX)logs/
-SS   = $(PREFIX)scripts/
 
 .PHONY: install
-install: RateEngine
-	@if [ ! -d $(BIN) ]; then \
-	    mkdir -p $(BIN); \
-	fi
-	@if [ -f $(MAIN_TARGET) ]; then \
-	    cp -fv $(MAIN_TARGET) $(BIN); \
+install: lib cli
+	@if [ -f $(CLI_TARGET) ]; then \
+	    cp -fv $(CLI_TARGET) $(OS_BIN); \
 	else \
 	    echo ""; \
-	    echo "Installation ERROR! The file "$(MAIN_TARGET)" is not found!"; \
+	    echo "Installation ERROR! The file "$(CLI_TARGET)" is not found!"; \
 	    echo ""; \
 	    exit 1; \
 	fi
-	@if [ ! -d $(LIBS) ]; then \
-	    mkdir -p $(LIBS); \
-	fi
-	@if [ -f $(RATING_LIB) ]; then \
-	    cp -fv $(RATING_LIB) $(LIBS); \
+	@if [ -f  $(RTPENGINE_CONNECTOR_LIB)]; then \
+	    cp -fv $(RTPENGINE_CONNECTOR_LIB) $(OS_LIB); \
 	else \
 	    echo ""; \
-	    echo "Installation ERROR! The file "$(RATING_LIB)" is not found!"; \
+	    echo "Installation ERROR! The file "$(RTPENGINE_CONNECTOR_LIB)" is not found!"; \
 	    echo ""; \
 	    exit 1; \
-	fi
-	@if [ -f $(CORE_LIB) ]; then \
-	    cp -fv $(CORE_LIB) $(LIBS); \
-	else \
-	    echo ""; \
-	    echo "Installation ERROR! The file "$(CORE_LIB)" is not found!"; \
-	    echo ""; \
-	    exit 1; \
-	fi
-	@if [ -f $(CC_LIB) ]; then \
-	    cp -fv $(CC_LIB) $(LIBS); \
-	else \
-	    echo ""; \
-	    echo "Installation ERROR! The file "$(CC_LIB)" is not found!"; \
-	    echo ""; \
-	    exit 1; \
-	fi
-	@if [ -f $(CDRM_LIB) ]; then \
-	    cp -fv $(CDRM_LIB) $(LIBS); \
-	else \
-	    echo ""; \
-	    echo "Installation ERROR! The file "$(CDRM_LIB)" is not found!"; \
-	    echo ""; \
-	    exit 1; \
-	fi
-	@if [ ! -f $(LIBS_CFG) ]; then \
-	    echo $(LIBS) > $(LIBS_CFG); \
-	    ldconfig; \
-	fi
-	@if [ ! -d $(CFG) ]; then \
-	    mkdir -p $(CFG); \
-	    cp -vR $(SMP) $(CFG);\
-	else \
-	    cp -vfR $(_SMP) $(CFG);\
-	fi
-	@if [ ! -d $(LOG) ]; then \
-	    mkdir -p $(LOG); \
-	fi
-	@if [ ! -d $(SS) ]; then \
-	    mkdir -p $(SS); \
-	    cp -vR $(CORE_DIR)scripts/* $(SS); \
 	fi
 
 
 .PHONY: uninstall
-uninstall:
-	@if [ -d $(PREFIX) ]; then \
-	    rm -fvR $(PREFIX); \
+uninstall: clean
+	@if [ -f $(OS_BIN)$(CLI_TARGET) ]; then \
+	    rm -fv  $(OS_BIN)$(CLI_TARGET); \
 	fi
-	@if [ -f $(LIBS_CFG) ]; then \
-	    rm -fv $(LIBS_CFG); \
+	@if [ -f $(OS_BIN)$(RTPENGINE_CONNECTOR_LIB) ]; then \
+	    rm -fv $(OS_BIN)$(RTPENGINE_CONNECTOR_LIB); \
 	fi
-
-
